# SilenceRemover

./: .env.example  .gitignore  AGENTS.md  ALGO.md  MP3_MANAGER_INTEGRATION.md  PLAN.md  README.md  add_to_path.bat  list_audio_models.py  main.py  opencode-schema.json  opencode.json  process_directory.py  pyproject.toml  remove_silence.py  run_trim.sh  run_trim_default.ps1  run_trim_no_target.sh  run_trim_target.ps1  serve_titles.py  test_gemini.py  verify_videos.py
.sisyphus/: boulder.json
archive/: process_directory.py  rename_from_titles.py  run_all.ps1  run_all.sh  transcribe_and_title.py
docs/: FLOW.md  SKIP_CONDITIONS.txt  SKIP_CONDITIONS.yaml  hevc_qsv.txt  libx265.txt
pwsh/: Cleanup-ProcessedFiles.ps1  Link-ShortVideos.ps1  Move-IgnoredRawVideos.ps1  Move-IgnoredRawVideos.py  Start-FfmpegApiSmokeTest.ps1  Start-HorizontalVideoProcessing.ps1  Start-VerticalLlmDryRun.ps1  Start-VerticalTitleEditor.ps1  Start-VerticalVideoProcessing-QuickTest.ps1  Start-VerticalVideoProcessing.ps1  Test-HardwareEncoders.ps1
remote/: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  SERVICE_PLAN.md  app.py  app_api.py  deploy-spa.sh  deploy.sh  filebrowser.service  media-manager.service  requirements.txt  setup-server.sh  translations.json
src/: __init__.py  cli.py  common.py  config.py  constants.py  content.py  encoding_resolver.py  env_config.py  ffmpeg_utils.py  filename_sanitizer.py  fs_utils.py  main_utils.py  openrouter_client.py  paths.py  phase1.py  process_directory.py  prompts.py  remove_silence.py  rename.py  rename_from_titles.py  silence_detector.py  silence_utils.py  title.py  transcribe.py  transcribe_and_title.py  trim.py
temp/: render_title_overlay_examples.py  sec_audit.sh  test_openrouter.py
tests/: conftest.py  ffmpeg_api_smoke.py  generate_fixtures.py  test_binary_search_silence.py  test_cli.py  test_ffmpeg_runner_progress.py  test_ffmpeg_transcode.py  test_hardware_encoders.py  test_is_file_stable.py  test_logo_overlay_cache.py  test_openrouter_transport.py  test_pipeline_display.py  test_pipeline_video_upload.py  test_silence_removed_runner.py  test_sr_ffmpeg_cmd_builder.py  test_sr_filename.py  test_sr_filter_graph.py  test_sr_media_manager.py  test_sr_mp3_manager.py  test_sr_progress_formatter.py  test_sr_progress_formatter_parsing.py  test_sr_silence_detection.py  test_sr_telegram_notify.py  (+5 more)
(+83 files in other folders)
