[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "packages/sr_transcription", "packages/sr_snippet", "packages/sr_title", "packages/sr_title_overlay", "packages/sr_trim_plan", "packages/openrouter_transport", "packages/sr_telegram_notify"]

[project]
name = "silence-remover"
version = "0.1.0"
description = "Video silence detection tool using FFMPEG"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "openrouter",
    "python-dotenv",
    "pillow",
    "arabic-reshaper",
    "python-bidi",
    "fastapi",
    "uvicorn",
]
