[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "packages/openrouter_transport", "packages/sr_filename", "packages/sr_ffmpeg_cmd_builder", "packages/sr_filter_graph", "packages/sr_mp3_manager", "packages/sr_progress_formatter", "packages/sr_silence_detection", "packages/sr_snippet", "packages/sr_telegram_notify", "packages/sr_threshold_selection", "packages/sr_title", "packages/sr_title_overlay", "packages/sr_transcription", "packages/sr_trim_plan"]

[project]
name = "silence-remover"
version = "0.1.0"
description = "Video silence detection tool using FFMPEG"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "openrouter",
    "python-dotenv",
    "pillow",
    "arabic-reshaper",
    "python-bidi",
    "fastapi",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
